--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: var(--info);
+  background-color: var(--primary);
   padding: 15px ;
   &__logo {
     display: flex;
